<resources>
    <string name="app_name">E-DOCTOR</string>
    <string name="digitos_solo_letras">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ áéíóúÁÉÍÓÚ</string>
    <string name="perfil_apellidos">Apellidos</string>
    <string name="perfil_cedula">Cédula o identificación</string>
    <string name="digitos_solo_numeros">0123456789</string>
    <string name="perfil_telefono">Teléfono</string>
    <string name="digitos_telefono">0123456789</string>
    <string name="registro_perfil_hint_contrasenia">Contraseña</string>
    <string name="registro_perfil_hint_repetir_clave">Confirmar contraseña</string>
    <string name="perfil_nombres">Nombres completos</string>
    <string name="email">Correo electrónico</string>
    <string name="login_escribe_tu_correo_titulo">Por favor, escribe tu email.</string>
    <string name="login_escribe_tu_correo_hint">Escribe tu correo electrónico</string>
    <string name="registro_correo_vacio">Ingresa tu correo para continuar.</string>
    <string name="login_listo">Listo</string>
    <string name="recuperar_contrasena_confirmacion_titulo">Confirmación</string>
    <string name="recuperar_contrasena_confirmacion_codigo_recuperacion">Código de recuperación</string>
    <string name="confirmacion_pin_vacio">Ingresa el código de activación para continuar.</string>
    <string name="recuperar_contrasena_confirmacion">Confirmar</string>
    <string name="recuperar_contrasena_confirmacion_no_recibi_correo">¿No recibiste el correo electrónico?</string>
    <string name="confirmacion_reenviar_correo">Volver a enviar correo electrónico</string>
    <string name="recuperar_contrasena_recuperar_titulo">Cambiar contraseña</string>
    <string name="recuperar_contrasena_recuperar_ingresar_contrasenia">Nueva contraseña</string>
    <string name="recuperar_contrasena_recuperar_confirmar_contrasenia">Repetir contraseña nueva</string>
    <string name="recuperar_contrasena_Cambiar_clave">Guardar cambios</string>
    <string name="cambiar_contrasenia_titulo">Seguridad</string>
    <string name="cambiar_contrasenia_actual">Contraseña actual</string>
    <string name="cambiar_contrasenia_nueva">Contraseña nueva</string>
    <string name="cambiar_contrasenia_confirmar">Repetir contraseña nueva</string>
    <string name="permisos_necesarios">Permisos son necesarios para la aplicación, por favor permítenos el acceso para poder continuar.</string>
    <string name="perfil_advertencia">Advertencia</string>
    <string name="perfil_error_server">Error de comunicación con el servidor, por favor intente más tarde.</string>
    <string name="login_title_advertencia">Advertencia</string>
    <string name="login_message_error_server">Error de comunicación con el servidor, por favor intente más tarde.</string>
    <string name="error_internet">Tu conexión está lenta o no tienes acceso a internet, verifica tu conexión e intenta de nuevo!</string>
    <string name="perfil_establecer_foto_perfil_seleccionar_foto">Selecciona una opción</string>
    <string name="perfil_Aceptar">Aceptar</string>
    <string name="perfil_cancelar">Cancelar</string>
    <string name="helper_btn_aceptar">Aceptar</string>
    <string name="helper_btn_cancelar">Cancelar</string>
    <string name="perfil_titulo">Mi perfil</string>
    <string name="perfil_establecer_foto_perfil_dialogo_galeria">Galería</string>
    <string name="perfil_establecer_foto_perfil_dialogo_camara">Cámara</string>
    <string name="perfil_establecer_foto_perfil_dialogo_eliminar_foto">Eliminar Foto</string>
    <string name="registro_perfil_camara_disponible">Cámara disponible</string>
    <string name="registro_perfil_camara_no_disponible">Cámara no disponible en este dispositivo.</string>
    <string name="registro_perfil_error_campo_obligatorio">Este campo es necesario.</string>
    <string name="registro_especificacion_clave_error">No cumplen con las condiciones especificadas.</string>
    <string name="registro_coincidencia_contrasena_titulo">Contraseñas no coinciden.</string>
    <string name="registro_perfil_camara_permisos_necesarios">Permisos son necesarios para la aplicación, por favor permítenos el acceso.</string>
    <string name="registro_perfil_camara_permisos_concedidos">Permisos concedidos.</string>
    <string name="registro_perfil_ok">Ok</string>
    <string name="registro_perfil_cancel">Cancelar.</string>
    <string name="registro_perfil_accion_cancelada">Acción cancelada</string>
    <string name="registro_especificacion_clave">Tu contraseña debe tener:</string>
    <string name="registro_especificacion_clave_caracteres">Mínimo 4 caracteres</string>
    <string name="registro_especificacion_letra">Al menos una letra</string>
    <string name="registro_especificacion_minuscula">Al menos una minúscula</string>
    <string name="registro_especificacion_clave_numeros">Al menos un número</string>
    <string name="registro_especificacion_clave_ok">Ok, entendido</string>
    <string name="solicitar_asistencia_btn_aceptar">Aceptar</string>
    <string name="registro_aviso">Aviso</string>
    <string name="registro_mensaje">Si retrocedes antes de completar tu información, perderás tus cambios.</string>
    <string name="registro_ok_entiendo">Ok, entendido</string>
    <string name="cambiar_contrasenia_advertencia">Advertencia</string>
    <string name="login_campo_obligatorio">Este campo es necesario.</string>
    <string name="recuperar_contrasena_enviaremos_codigo_recuperacion">Enviaremos un código a tu correo para validar tu cuenta.</string>
    <string name="registro_correo_no_valido">El correo que ingresaste no es válido.</string>
    <string name="registro_correo_ok">Ok</string>

</resources>
