<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/registro_especificacion_clave"/>
    <TextView
        android:id="@+id/longitud_caracteres"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_especificacion_clave_caracteres"/>
    <TextView
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_especificacion_letra"/>
    <TextView
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_especificacion_minuscula"/>
    <TextView
        android:textSize="16sp"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_especificacion_clave_numeros"/>
    <TextView
        android:textSize="16sp"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_especificacion_letra"/>
    <LinearLayout
        android:id="@+id/text_view_ok"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:textColor="@color/color_link"
            android:textSize="16sp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_especificacion_clave_ok"/>
    </LinearLayout>
</LinearLayout>
