<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".OlvidastesConfirmarPin">
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/fondo_gris"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">
            <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:text="@string/recuperar_contrasena_confirmacion_titulo"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/text_correo_usuario"
                    android:text="Enviamos un código a este correo rubiok@plusservices.ec"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"/>
            <EditText
                    android:id="@+id/edit_text_pin_recuperacion"
                    android:layout_width="290dp"
                    android:layout_height="45dp"
                    android:clickable="true"
                    android:hint="@string/recuperar_contrasena_confirmacion_codigo_recuperacion"
                    android:textColor="#424242"
                    android:textSize="16sp"
                    android:maxLength="4"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/shape_edittext_bordes_redondeados_out"/>
            <TextView
                    android:id="@+id/text_view_error_pin_vacio_recuperacion"
                    android:textColor="@color/texto_error"
                    android:textSize="13sp"
                    android:layout_width="280dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmacion_pin_vacio"/>
            <Button
                    style="@style/BotonesAzulesCurvos"
                    android:text="@string/recuperar_contrasena_confirmacion"
                    android:onClick="comprobarPin"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blanco"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:textSize="16sp"
                    android:text="@string/recuperar_contrasena_confirmacion_no_recibi_correo"/>
            <LinearLayout
                    android:id="@+id/text_reenviar_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_link"
                        android:textSize="16sp"
                        android:text="@string/confirmacion_reenviar_correo"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/progress_bar_transparent"/>
</RelativeLayout>