<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/blanco"
        tools:context=".RecuperarContrasenaCorreo">

    <ScrollView
            android:background="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">

        <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/imvInicioSesion"
                android:src="@drawable/iniciosesion"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
        <LinearLayout
                android:layout_below="@+id/imvInicioSesion"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/blanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/login_escribe_tu_correo_titulo"/>
            <EditText
                    android:id="@+id/edit_text_codigo_confirmacion"
                    android:layout_width="249dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/login_escribe_tu_correo_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#424242"
                    android:textSize="15sp"
                    android:maxLength="120"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/shape_edittext_bordes_redondeados_out"/>
            <TextView
                    android:id="@+id/text_view_error_correo_vacio"
                    android:textColor="@color/texto_error"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="2dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_correo_vacio"/>

            <Button
                    android:id="@+id/button_log_correo"
                    style="@style/BotonesAzulesCurvos"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_listo"
                    android:onClick="comprobarCorreo"/>

        </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <include layout="@layout/progress_bar_transparent"/>
    <ImageView
            android:id="@+id/image_atras"
            android:onClick="retrocederPantallaBienvenida"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_saeta_izquierda"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"/>


</RelativeLayout>