<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".OlvidastesCambiarContrasena">
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/fondo_gris"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/text_titulo_recuperar"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:layout_marginTop="0dp"
                    android:text="@string/recuperar_contrasena_recuperar_titulo"
                    android:layout_width="match_parent" />
            <RelativeLayout
                    android:id="@+id/relative_contrasenias"
                    android:layout_below="@+id/text_titulo_recuperar"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RelativeLayout
                        android:layout_centerInParent="true"
                        android:layout_width="270dp"
                        android:layout_height="100dp"
                        android:background="@drawable/shape_recuperar_contrasenia">
                    <EditText
                            android:id="@+id/edit_contrasenia_nueva"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recuperar_contrasena_recuperar_ingresar_contrasenia"
                            android:textSize="16sp"
                            android:maxLength="20"
                            android:layout_marginRight="25dp"
                            android:backgroundTint="@color/blanco"
                            android:inputType="textPassword"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/image_visible_pass_recuperar"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_clave_visible"
                            android:layout_marginTop="8dp"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/image_no_visible_pass_recuperar"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_clave_no_visible"
                            android:visibility="gone"/>
                    <EditText
                            android:id="@+id/edit_contrasenia_repetir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recuperar_contrasena_recuperar_confirmar_contrasenia"
                            android:textSize="16sp"
                            android:maxLength="20"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="25dp"
                            android:backgroundTint="@color/blanco"
                            android:inputType="textPassword"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/image_visible_pass_repetir"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_clave_visible"
                            android:layout_marginTop="59dp"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/image_no_visible_pass_repetir"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="59dp"
                            android:src="@drawable/ic_clave_no_visible"
                            android:visibility="gone"/>
                </RelativeLayout>
                <View
                        android:layout_centerHorizontal="true"
                        android:background="#f5f5f5"
                        android:layout_width="270dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="50dp"/>
            </RelativeLayout>
            <TextView
                    android:id="@+id/text_error_clave_vacio_recuperacion"
                    android:textColor="@color/texto_error"
                    android:textSize="13sp"
                    android:layout_width="260dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmacion_pin_vacio"/>
            <Button

                    android:layout_below="@+id/relative_contrasenias"
                    android:layout_marginLeft="16dp"
                    style="@style/BotonesAzulesCurvos"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/recuperar_contrasena_Cambiar_clave"
                    android:textColor="@color/blanco"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/progress_bar_transparent"/>
</RelativeLayout>

