<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_perfil"
                android:layout_width="match_parent"
                android:background="@color/blanco"
                android:layout_height="match_parent"
                tools:context=".Registro">
    <include layout="@layout/toolbar"/>
    <ImageView
            android:id="@+id/image_atras"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_saeta_izquierda"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="56dp"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="vertical">
            <RelativeLayout
                    android:id="@+id/relative_cabecera_foto_usuario"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:id="@+id/linear_foto"
                        android:layout_width="123dp"
                        android:gravity="center"
                        android:background="@drawable/shape_oval"
                        android:layout_height="123dp">
                    <ImageView
                            android:id="@+id/image_ic_camara"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/icon_camera"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/circle_image_foto_usuario"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:visibility="gone"
                            android:transitionName="simple_activity_transition_registro"
                            tools:ignore="UnusedAttribute"/>
                </LinearLayout>
                <RelativeLayout
                        android:id="@+id/relative_add_imagen"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignRight="@+id/linear_foto"
                        android:background="@drawable/shape_oval_agregar_foto" />
            </RelativeLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/perfil_nombres"
                        android:id="@+id/text_input_nombres"
                        fab:errorEnabled="true"
                        android:layout_below="@id/relative_cabecera_foto_usuario"
                        style="@style/TextInputLayout">
                    <EditText
                            android:id="@+id/edit_nombre_usuario"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:digits="@string/digitos_solo_letras"
                            android:drawablePadding="5dp"
                            android:inputType="textPersonName|textCapSentences"
                            android:textSize="14sp"
                            android:maxLength="50"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/email"
                        android:id="@+id/text_input_correo"
                        style="@style/TextInputLayout"
                        fab:errorEnabled="true"
                        android:layout_below="@id/text_input_nombres">
                    <EditText
                            android:id="@+id/edit_correo_usuario"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:drawablePadding="5dp"
                            android:textSize="14sp"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/perfil_telefono"
                        android:id="@+id/text_input_telefono"
                        style="@style/TextInputLayout"
                        fab:errorEnabled="true"
                        android:layout_below="@id/edit_correo_usuario">
                    <EditText
                            android:id="@+id/edit_telefono_usuario"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:digits="@string/digitos_telefono"
                            android:drawablePadding="5dp"
                            android:inputType="phone"
                            android:maxLength="30"
                            android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <RelativeLayout
                        android:id="@+id/relative_clave_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_telefono">
                    <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/registro_perfil_hint_contrasenia"
                            android:id="@+id/text_input_clave"
                            fab:passwordToggleEnabled="true"
                            fab:counterEnabled="true"
                            fab:counterMaxLength="8"
                            fab:errorEnabled="true"
                            style="@style/TextInputLayout">
                        <EditText
                                android:id="@+id/edit_clave_usuario"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:drawablePadding="5dp"
                                android:inputType="textPassword"
                                android:textSize="14sp"
                                android:maxLength="20"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/relative_clave_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/relative_clave_1">
                    <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/registro_perfil_hint_repetir_clave"
                            android:id="@+id/text_input_clave_confirmar"
                            fab:passwordToggleEnabled="true"
                            fab:counterEnabled="true"
                            fab:counterMaxLength="8"
                            fab:errorEnabled="true"
                            style="@style/TextInputLayout">
                        <EditText
                                android:id="@+id/edit_clave_confirmar_usuario"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:drawablePadding="5dp"
                                android:textSize="14sp"
                                android:inputType="textPassword"
                                android:maxLength="20"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
                <Spinner
                        android:id="@+id/spinner_paises"
                        android:layout_below="@id/text_input_clave_confirmar"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_button_registrar"
            android:src="@drawable/ic_fab_guardar"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorPrimary"
            android:clickable="true"
            style="@style/FloatingActionButton"/>
    <include layout="@layout/progress_bar_transparent"/>
</RelativeLayout>